# nes-rust

./: .gitignore  Cargo.toml  Justfile  README.md  build.rs  mise.toml  vite.config.js
.github/workflows/: deploy.yml
deploy/infrastructure/: .terraform.lock.hcl  main.tf  variables.tf
src/: address.rs  addressing_modes.rs  apu.rs  bus.rs  cartridge.rs  cpu.rs  i_nes.rs  ines.rs  input.rs  instructions.rs  lib.rs  main.rs  mapper.rs  memory.rs  nes.rs  opcodes.rs  ppu.rs  runner.rs  serialize.rs  video.rs
src/apu/: envelope.rs  mod.rs  noise.rs  pulse.rs  triangle.rs
src/audio/: blip_buffer.rs  mod.rs  ring_buffer.rs
src/cartridge/: i_nes.rs  mapper.rs  mod.rs
src/cartridge/mapper/: mmc1.rs  mod.rs  nrom.rs  uxrom.rs
src/cpu/: addressing_modes.rs  bus.rs  instruction.rs  instructions.rs  memory.rs  mod.rs  opcodes.rs  stack.rs  stack_instructions.rs
src/cpu/instruction/: arithmetic.rs  branch.rs  inc_dec.rs  jump.rs  load_store.rs  logical.rs  mod.rs  shift.rs  stack.rs  status.rs  system.rs  transfer.rs
src/ppu/: bus.rs  control.rs  mask.rs  memory.rs  mod.rs  registers.rs  scroll.rs  status.rs
src/runtime/: mod.rs  sdl.rs  web.rs
src/runtime/web/: audio.rs  mod.rs
tests/: external_tests.rs  simple_programs.rs
tests/blargg_cpu_tests/: readme.txt
web/: audio-processor.js  audio.js  index.html  package.json  webpack.config.js
