[package]
name = "nes-rust"
version = "0.1.0"
authors = ["Felix Chapman <aelred717@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["sdl", "web"]
sdl = ["dep:sdl2", "dep:env_logger"]
web = ["dep:wasm-bindgen", "dep:web-sys", "dep:console_log"]

[dependencies]
log = "0.4.22"
bitflags = "2.6.0"
anyhow = "1.0.89"

sdl2 = { version = "0.37.0", optional = true, features = ["bundled"] }
env_logger = { version = "0.11.5", optional = true, default-features = false, features = [
    "color",
    "auto-color",
    "humantime",
] }

wasm-bindgen = { version = "0.2.93", optional = true }
web-sys = { version = "0.3.70", optional = true, features = [
    'CanvasRenderingContext2d',
    'KeyboardEvent',
    'ImageData',
    'Document',
    'EventListener',
    'Element',
    'HtmlCanvasElement',
    'Window',
] }
console_log = { version = "1.0.0", optional = true }

[dev-dependencies]
hexdump = "0.1.2"
image = "0.25.2"
yare = "3.0.0"
