[package]
name = "nes-rust"
version = "0.1.0"
authors = ["Felix Chapman <aelred717@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["sdl", "web"]
sdl = ["dep:sdl2", "dep:env_logger"]
web = [
    "dep:wasm-bindgen",
    "dep:web-sys",
    "dep:zip",
    "dep:base64",
    "dep:console_log",
]

[dependencies]
log = "0.4.22"
bitflags = "2.6.0"
anyhow = "1.0.89"

sdl2 = { version = "0.37.0", optional = true, features = ["bundled"] }
env_logger = { version = "0.11.5", optional = true, default-features = false, features = [
    "color",
    "auto-color",
    "humantime",
] }

wasm-bindgen = { version = "0.2.93", optional = true }
web-sys = { version = "0.3.70", optional = true, features = [
    'CanvasRenderingContext2d',
    'KeyboardEvent',
    'ImageData',
    'Document',
    'EventListener',
    'Element',
    'HtmlCanvasElement',
    'Window',
    # Features required for reading uploaded/drag+dropped ROMs
    'DragEvent',
    'DataTransfer',
    'DataTransferItem',
    'DataTransferItemList',
    'File',
    'FileList',
    'HtmlInputElement',
    # Features required for the mobile controller
    'PointerEvent',
    # Feature required for saving the game
    'Storage',
] }
zip = { version = "2.2.0", optional = true, default-features = false, features = [
    "deflate",
] }
base64 = { version = "0.22.1", optional = true }
console_log = { version = "1.0.0", optional = true }

[dev-dependencies]
hexdump = "0.1.2"
image = "0.25.2"
yare = "3.0.0"

[package.metadata.wasm-pack.profile.release]
# default is ['-O4'], `--debuginfo` adds useful profiling information
wasm-opt = ['-O4', '--debuginfo']
