[package]
name = "nes-rust"
version = "0.1.0"
authors = ["Felix Chapman <aelred717@gmail.com>"]
edition = "2021"
default-run = "nes-rust"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["sdl", "web"]
sdl = ["dep:sdl2", "dep:env_logger"]
web = [
    "dep:wasm-bindgen",
    "dep:web-sys",
    "dep:zip",
    "dep:base64",
    "dep:console_log",
]

[dependencies]
log = { version = "0.4.22", features = ["std"] }
bitflags = "2.6.0"
anyhow = "1.0.89"

# unsafe_textures removes a very annoying lifetime parameter on textures that we're not too worried about
sdl2 = { version = "0.37.0", optional = true, features = ["bundled", "unsafe_textures"] }
env_logger = { version = "0.11.5", optional = true, default-features = false, features = [
    "color",
    "auto-color",
    "humantime",
] }

wasm-bindgen = { version = "0.2.114", optional = true }
js-sys = { version = "0.3.92", features = ["futures"] }
web-sys = { version = "0.3.70", optional = true, features = [
    'CanvasRenderingContext2d',
    'KeyboardEvent',
    'ImageData',
    'Document',
    'EventListener',
    'Element',
    'HtmlCanvasElement',
    'Window',
    # Features required for reading uploaded/drag+dropped ROMs
    'DragEvent',
    'DataTransfer',
    'DataTransferItem',
    'DataTransferItemList',
    'File',
    'FileList',
    'HtmlInputElement',
    # Features required for the mobile controller
    'PointerEvent',
    # Feature required for saving the game
    'Storage',
    # Features required for audio
    'AudioContext',
    'AudioDestinationNode',
    'AudioWorklet',
    'AudioWorkletNode',
    'AudioWorkletNodeOptions'
] }
zip = { version = "2.2.0", optional = true, default-features = false, features = [
    "deflate",
] }
base64 = { version = "0.22.1", optional = true }
console_log = { version = "1.0.0", optional = true }
wasm_thread = "0.3.3"
web-time = "1.1.0"

[dev-dependencies]
hexdump = "0.1.2"
image = "0.25.2"
yare = "3.0.0"

[package.metadata.wasm-pack.profile.release]
# default is ['-O4'], `--debuginfo` adds useful profiling information
wasm-opt = ['-O4', '--debuginfo']
